--- a/src/components/website/home/awards/slider/slider.module.css
+++ b/src/components/website/home/awards/slider/slider.module.css
@@ -1,5 +1,5 @@
 .root {
-    @apply lg:absolute top-0 bottom-0 right-0 flex items-center lg:w-[50%] 3xl:w-[55%] overflow-hidden py-[50px] lg:py-0
+    @apply lg:w-[50%] 3xl:w-[55%] overflow-hidden py-[80px] lg:py-0 lg:ml-auto
 }
 
 .slides {
