--- a/src/components/website/home/services/cards/cards.module.css
+++ b/src/components/website/home/services/cards/cards.module.css
@@ -1,13 +1,19 @@
 .root {
-    @apply grid grid-cols-4 gap-8 mt-[50px]
+    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-3 xl:gap-x-5 gap-y-4 xl:gap-y-8 mt-[50px]
 }
 
 .cards {
-    @apply rounded-[20px] [boxShadow:0px_10px_80px_rgba(0,_0,_0,_0.1)] p-10
+    @apply rounded-[20px] [boxShadow:0px_10px_80px_rgba(0,_0,_0,_0.1)] py-8 px-4 xl:p-8 3xl:p-10 hover:border-[#E4E4E4] border-2 hover:bg-black transition-all duration-500
 }
 
+.title {
+    @apply text-xl xl:text-2xl 3xl:text-3xl font-mono font-normal leading-tight mb-5 transition-all duration-500
+}
 
+.para {
+    @apply text-base sm:text-sm xl:text-base 3xl:text-lg text-navy  leading-normal mb-5 transition-all duration-500
+}
 
-
-
-
+.cta {
+    @apply text-base 3xl:text-lg text-navy  leading-normal hover:text-white hover:underline hover:underline-offset-8 transition-all duration-500
+}
