--- a/src/components/website/footer/copyright/copyright.module.css
+++ b/src/components/website/footer/copyright/copyright.module.css
@@ -1,18 +1,24 @@
 .__root {
   @apply bg-[#0A1225] border-y border-[#334155] py-[20px];
 }
-.__root .__bottomBar {
+.__bottomBar {
   @apply grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-5 items-center text-[#94A3B8];
 }
-.__root .__bottomBar > span {
-  @apply block text-center;
+.__bottomBar > span {
+  @apply block sm:text-start text-center;
 }
-.__root .__bottomBar .__grid {
+.__grid {
   @apply flex sm:gap-5 gap-2 md:mx-auto sm:justify-start justify-center;
 }
-.__root .__bottomBar .__grid2 {
+.__grid a {
+  @apply transition-all ease-in-out duration-500 hover:text-white;
+}
+.__grid span {
+  @apply ps-5;
+}
+.__grid2 {
   @apply flex gap-5 xl:ms-auto items-center sm:justify-start justify-center;
 }
-.__root .__bottomBar .__grid2 .__smmIcons {
+.__smmIcons {
   @apply bg-[#C4C4C433] transition-all ease-in-out duration-500 hover:opacity-50 inline-flex items-center justify-center w-8 h-8 rounded-full;
 }
