--- a/src/components/website/home/our-customers/testimonials/testimonials.module.css
+++ b/src/components/website/home/our-customers/testimonials/testimonials.module.css
@@ -21,7 +21,7 @@
     @apply min-w-0 pl-[0.8rem] grow-0 shrink-0 basis-full;
   }
   .descCard {
-    @apply block 2xl:py-16 xl:py-12 md:py-10 sm:py-8 py-6 xl:px-12 md:px-10 sm:px-8 px-6 relative border border-[#D6D7DE] rounded-2xl w-[100%] mx-auto shadow-[0px_40px_80px_0px_#0000000D] backdrop-blur-[10px] bg-gradient-to-r from-[#FFFFFFD9] to-[#FFFFFF80] text-start;
+    @apply block 2xl:py-16 xl:py-12 md:py-10 sm:py-8 py-6 xl:px-12 md:px-10 sm:px-8 px-6 relative border border-[#D6D7DE] rounded-2xl w-[100%] mx-auto shadow-[0px_40px_80px_0px_#0000000D] backdrop-blur-[10px] max-w-[1150px] bg-gradient-to-r from-[#FFFFFFD9] to-[#FFFFFF80] text-start;
   }
   .__grid {
     @apply grid grid-cols-12 md:gap-10 gap-5;
@@ -30,7 +30,7 @@
     @apply lg:col-span-9 col-span-12;
   }
   .desc {
-    @apply xl:text-[22px] md:text-[18px] sm:text-base text-[15px] leading-normal font-medium font-manrope;
+    @apply xl:text-[22px] md:text-[18px] sm:text-[16px] text-[15px] leading-normal font-medium font-manrope;
   }
   .clientName {
     @apply block my-3 text-[#4A4A68] font-manrope font-medium lg:text-lg md:text-base text-sm leading-tight;
