--- a/src/components/website/home/trending-podcast/cards/cards.module.css
+++ b/src/components/website/home/trending-podcast/cards/cards.module.css
@@ -1,5 +1,5 @@
 .slides {
-    @apply grow-0 shrink-0 basis-[340px] sm:basis-[500px] xl:basis-[550px] pl-4 text-white
+    @apply grow-0 shrink-0 basis-[340px] sm:basis-[500px] xl:basis-[550px] pl-4 text-white pb-2
 }
 
 .imgBox {
@@ -39,5 +39,5 @@
 }
 
 .cta {
-    @apply text-[14px] sm:text-[16px] xl:text-[18px] leading-tight !underline !underline-offset-8
+    @apply text-[14px] sm:text-[16px] xl:text-[18px] leading-tight underline underline-offset-8
 }
