--- a/src/components/website/home/contact/contact.module.css
+++ b/src/components/website/home/contact/contact.module.css
@@ -1,11 +1,15 @@
 .root {
-    @apply py-[70px] bg-black relative text-white z-10
+  @apply py-[70px] bg-black relative text-white z-10;
 }
-
+.banner {
+  @apply lg:absolute lg:right-[50px] 2xl:right-[100px] 3xl:right-[50px] lg:bottom-[-50px]  lg:w-[50%];
+}
+.content {
+  @apply lg:w-[55%] xl:w-[50%] 3xl:w-[55%] mt-10 lg:mt-0;
+}
 .title {
-    @apply text-[35px] sm:text-[40px] md:text-[50px] lg:text-[60px] 3xl:text-[65px] leading-[1.1] font-mono mb-5 max-w-[400px] md:max-w-[600px] lg:max-w-[700px]
+  @apply text-[35px] sm:text-[40px] md:text-[50px] lg:text-[60px] 3xl:text-[65px] leading-[1.1] font-mono mb-5 max-w-[400px] md:max-w-[600px] lg:max-w-[700px];
 }
-
 .para {
-    @apply text-[14px] sm:text-[16px] 2xl:text-[18px] leading-normal mb-8
+  @apply text-[14px] sm:text-[16px] 2xl:text-[18px] leading-normal mb-8;
 }
