--- a/src/components/website/why-choose/why-choose.module.css
+++ b/src/components/website/why-choose/why-choose.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply relative lg:py-[100px] md:py-[80px] py-[60px];
+  @apply relative pt-[40px] lg:pb-[100px] md:pb-[80px] pb-[60px];
 }
 .grids {
   @apply grid lg:grid-cols-2 grid-cols-1 items-center gap-10;
