--- a/src/components/website/about-us/believe-in/cards/cards.module.css
+++ b/src/components/website/about-us/believe-in/cards/cards.module.css
@@ -6,9 +6,9 @@
 }
 
 .title {
-  @apply text-xl xl:text-2xl 3xl:text-3xl font-mono font-normal leading-tight mb-5 transition-all duration-500;
+  @apply text-[20px] xl:text-[24px] 3xl:text-[30px] font-mono font-normal leading-tight mb-5 transition-all duration-500;
 }
 
 .para {
-  @apply text-base sm:text-sm xl:text-base 3xl:text-lg text-navy  leading-normal transition-all duration-500 md:min-h-[125px];
+  @apply text-[16px] sm:text-[14px] xl:text-[16px] 3xl:text-[18px] text-navy leading-normal transition-all duration-500 md:min-h-[125px];
 }
