--- a/src/components/website/banner-cta/banner-cta.module.css
+++ b/src/components/website/banner-cta/banner-cta.module.css
@@ -14,10 +14,10 @@
   @apply 2xl:basis-[22%] xl:basis-[25%] lg:basis-[35%] basis-full;
 }
 .title {
-  @apply font-mono text-white font-normal text-[25px] md:text-[35px] lg:text-[45px] 2xl:text-[52px] 3xl:text-[60px] sm:mb-5 mb-3 leading-[1.1];
+  @apply font-mono text-white font-normal text-[25px] md:text-[35px] lg:text-[45px] 2xl:text-[52px] 3xl:text-[60px] sm:mb-5 mb-3 leading-[1.1] line-clamp-2;
 }
 .para {
-  @apply text-[14px] md:text-[16px] 3xl:text-[20px] leading-normal text-white sm:text-start text-justify;
+  @apply text-[14px] md:text-[16px] 3xl:text-[20px] leading-normal text-white sm:text-start text-justify line-clamp-2;
 }
 .cta {
   @apply hover:bg-black text-black hover:border hover:border-white hover:[boxShadow:0px_5px_15px_rgba(255,_118,_117,_0.3)] hover:text-white bg-white hover:bg-none !w-full;
