--- a/src/components/website/online-reputation-management/hero/hero.module.css
+++ b/src/components/website/online-reputation-management/hero/hero.module.css
@@ -3,7 +3,7 @@
 }
 
 .title {
-  @apply font-mono font-normal text-[30px] sm:text-[40px] md:text-[50px] lg:text-[55px] 2xl:text-[60px] leading-[1.1] mb-4 3xl:max-w-[750px] max-w-[700px];
+  @apply font-mono font-normal text-[25px] sm:text-[40px] md:text-[50px] lg:text-[55px] 2xl:text-[60px] leading-[1.1] mb-4 max-w-[750px];
 }
 
 .para {
