--- a/src/components/website/podcast/latest-podcast/latest-podcast.module.css
+++ b/src/components/website/podcast/latest-podcast/latest-podcast.module.css
@@ -1,17 +1,17 @@
 .tabList {
-  @apply w-full bg-transparent flex-wrap justify-between;
+  @apply w-full h-full p-0 bg-transparent flex-wrap gap-10 lg:justify-between justify-center;
 }
 .__grid {
-  @apply flex gap-x-8 my-5 md:overflow-hidden overflow-x-scroll;
+  @apply flex gap-x-8 md:overflow-hidden overflow-x-scroll;
 }
 .title {
-  @apply text-[25px] sm:text-[35px] xl:text-[40px] text-black 2xl:text-[55px] 3xl:text-[60px] leading-[1.1] font-mono mb-3;
+  @apply text-[25px] sm:text-[35px] xl:text-[40px] text-black 2xl:text-[55px] 3xl:text-[60px] leading-[1.1] font-mono;
 }
 .tabTrigger {
   @apply capitalize w-max px-6 text-lg font-manrope font-medium border-2 border-[#4A4A6880] rounded-full;
 }
 .content {
-  @apply w-full xl:my-[100px] mt-[150px] mb-[80px];
+  @apply w-full xl:my-[100px] my-[80px];
 }
 .__grid2 {
   @apply grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-10 items-center mt-0;
