--- a/src/components/website/print-placement/one-roof/one-roof.module.css
+++ b/src/components/website/print-placement/one-roof/one-roof.module.css
@@ -1,20 +1,20 @@
-.root {
-  @apply relative z-10 overflow-hidden 3xl:py-[200px] lg:py-[100px] pb-[50px];
-}
+/* .root {
+  @apply overflow-x-hidden overflow-y-auto;
+} */
 .img {
-  @apply lg:absolute lg:top-0 lg:bottom-0 lg:-right-0 3xl:w-[55%] lg:w-[50%] mx-auto h-full object-contain object-center;
+  @apply lg:absolute lg:bottom-0 lg:-right-[150px] lg:max-w-[850px] xl:max-w-[950px] 2xl:max-w-[1100px] 3xl:max-w-[1200px];
 }
 .__grid {
-  @apply grid grid-cols-12 items-center gap-x-5;
+  @apply grid grid-cols-12 gap-x-5;
 }
 .column {
-  @apply lg:col-span-6 col-span-12;
+  @apply lg:col-span-6 col-span-12 lg:mt-0 mt-[40px];
 }
 .title {
   @apply text-[25px] sm:text-[35px] xl:text-[40px] 2xl:text-[45px] 3xl:text-[55px] leading-[1.1] font-mono mb-5 3xl:max-w-[800px] 2xl:max-w-[650px] lg:max-w-[500px];
 }
 .para {
-  @apply text-[14px] sm:text-[16px] 2xl:text-[18px] text-navy leading-normal lg:max-w-[680px];
+  @apply text-[14px] sm:text-[16px] 2xl:text-[18px] text-navy leading-normal lg:max-w-[660px];
 }
 .cta {
   @apply flex items-center gap-4 mt-7;
