--- a/src/components/website/print-placement/possibilities/possibilities.module.css
+++ b/src/components/website/print-placement/possibilities/possibilities.module.css
@@ -5,17 +5,23 @@
   @apply text-[30px] text-center sm:text-[35px] xl:text-[40px] 2xl:text-[45px] 3xl:text-[55px] leading-[1.1] font-mono mb-5;
 }
 .__grid {
-  @apply grid lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 lg:gap-x-10 gap-10 max-w-[1250px] pt-[50px] mx-auto;
+  @apply grid lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 lg:gap-x-10 gap-10 max-w-[1440px] pt-[50px] mx-auto;
 }
 .card {
   @apply text-center h-full;
+}
+.imgCard{
+  @apply h-[320px] shadow-[0px_4px_4px_0px_#00000025] rounded-lg flex items-center justify-center md:mb-10 mb-5
+}
+.imgCard img{
+  @apply mx-auto max-w-[90%] h-full
 }
 .content {
   @apply max-w-[320px] mx-auto mt-4;
 }
 .content > .title {
-  @apply text-[25px] md:text-[32px] leading-tight font-normal font-mono mb-3;
+  @apply text-[25px] md:text-[32px] leading-tight font-normal font-mono mb-5;
 }
 .content > .desc {
-  @apply text-sm sm:text-[16px] lg:text-[18px] leading-tight font-bold font-manrope mb-3;
+  @apply text-sm sm:text-[16px] lg:text-[18px] leading-tight font-bold font-manrope;
 }
