--- a/src/components/website/reviews/cards/cards.module.css
+++ b/src/components/website/reviews/cards/cards.module.css
@@ -35,7 +35,7 @@
   @apply lg:col-span-3 col-span-12;
 }
 .cta {
-  @apply sm:flex hidden xs:flex-col gap-4 lg:items-end;
+  @apply sm:flex hidden lg:flex-col gap-4 lg:items-end;
 }
 .cta2 {
   @apply sm:hidden flex sm:flex-col gap-4 lg:items-end mt-10 justify-center;
